about, anchor smooth-scroll contacts

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -17,3 +17,5 @@
 @import "partials/content.styl";
 @import "partials/features.styl";
 @import "partials/footer.styl";
+@import "partials/contacts.styl";
+@import "partials/about.styl";
