--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -15,16 +15,16 @@
                 <h3>Карта сайта</h3>
                 <ul class="site-map">
                     <li>
-                        <a href="/fc_projects">Каталог</a>
+                        <a data-scroll href="#catalog">Каталог</a>
                     </li>
                     <li>
-                        <a href="/services">Преимущества</a>
+                        <a data-scroll href="#features">Преимущества</a>
                     </li>
                     <li>
-                        <a href="/aboutus">О компании</a>
+                        <a data-scroll href="#about">О компании</a>
                     </li>
                     <li>
-                        <a href="/contactus">Контакты</a>
+                        <a data-scroll href="#contacts">Контакты</a>
                     </li>
                 </ul>
             </div>
@@ -32,7 +32,7 @@
                 <div class="call d-flex text-sm-center">
                     <a class="footer-call" href="tel:+78632491794">+7(863) 249-17-94</a>
                     <a href="#" data-toggle="modal" data-target="#call" class="button-clear">
-                        <span class="btn btn-primary">Заказать звонок</span>
+                        <!--<span class="btn btn-primary">Заказать звонок</span>-->
                     </a>
                 </div>
             </div>
