--- a/src/template/header.html
+++ b/src/template/header.html
@@ -8,7 +8,7 @@
                 обслуживание. Богатый выбор соврменной техники от официальных поставщиков и дистрибьюторов на территории РФ.
             </p>
             <div class="button-wrapper">
-                <button type="button" class="btn btn-secondary">Подробнее</button>
+                <!--<button type="button" class="btn btn-secondary">Подробнее</button>-->
             </div>
         </div>
     <!--</div>-->
@@ -56,27 +56,27 @@
     <div class="page-header__index-nav nav nav-pills">
         <ul class="page-header_index-nav-list nav nav-pills row flex-lg-middle">
             <li class="page-header__index-nav-item nav-item col-md col-lg">
-                <a href="" class="nav-link active">
+                <a data-scroll href="#catalog" class="nav-link active">
                     <h2 class="index-nav__title">Каталог</h2>
-                    <p class="index-nav__description">Что-то про каталог</p>
+                    <!--<p class="index-nav__description">Что-то про каталог</p>-->
                 </a>
             </li>
             <li class="page-header__index-nav-item nav-item col-md col-lg">
-                <a href="" class="nav-link">
-                    <h2 class="index-nav__title">Монтаж</h2>
-                    <p class="index-nav__description">Что-то про монтаж</p>
+                <a data-scroll href="#features" class="nav-link">
+                    <h2 class="index-nav__title">Преимущества</h2>
+                    <!--<p class="index-nav__description">Что-то про монтаж</p>-->
                 </a>
             </li>
             <li class="page-header__index-nav-item nav-item col-md col-lg">
-                <a href="" class="nav-link">
-                    <h2 class="index-nav__title">Новости</h2>
-                    <p class="index-nav__description">Что-то про новости</p>
+                <a data-scroll href="#about" class="nav-link">
+                    <h2 class="index-nav__title">О нас</h2>
+                    <!--<p class="index-nav__description">Что-то про новости</p>-->
                 </a>
             </li>
             <li class="page-header__index-nav-item nav-item col-md col-lg">
-                <a href="" class="nav-link">
-                    <h2 class="index-nav__title">Партнеры</h2>
-                    <p class="index-nav__description">Что-то про партнеров</p>
+                <a data-scroll href="#contacts" class="nav-link">
+                    <h2 class="index-nav__title">Контакты</h2>
+                    <!--<p class="index-nav__description">Что-то про партнеров</p>-->
                 </a>
             </li>
         </ul>
