--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -6,8 +6,8 @@
                     <p>© ООО Корпорация безопасности 2017 <br>
                         Все права защищены<br>
                         Не является публичной офертой<br>
-                        <a href="#" data-toggle="modal" data-target="#policy">Политика конфиденциальности</a><br>
-                        <a href="#" data-toggle="modal" data-target="#personal">Согласие на сбор и обработку персональных данных</a>
+                        <!--<a href="#" data-toggle="modal" data-target="#policy">Политика конфиденциальности</a><br>-->
+                        <!--<a href="#" data-toggle="modal" data-target="#personal">Согласие на сбор и обработку персональных данных</a>-->
                     </p>
                 </div>
             </div>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-sm-3 d-flex justify-content-center">
                 <div class="call d-flex text-sm-center">
-                    <a class="footer-call" href="tel:+78632491794">+7(863) 249-17-94</a>
+                    <a class="footer-call" href="tel:+78632491794">+7(863) 294-17-94</a>
                     <a href="#" data-toggle="modal" data-target="#call" class="button-clear">
                         <!--<span class="btn btn-primary">Заказать звонок</span>-->
                     </a>
